# limpEngine

./: CMakeLists.txt  README.md
LimpEngine/: CMakeLists.txt  limpAnimation.hpp  limpBufferObject.hpp  limpCamera.hpp  limpColor.hpp  limpConfigManager.cpp  limpConfigManager.hpp  limpDefaultGraphicTypes.hpp  limpEngine.hpp  limpFramebuffer.hpp  limpGame.hpp  limpGraphicsObject.hpp  limpLight.hpp  limpLog.hpp  limpMaterial.hpp  limpMath.hpp  limpMesh.hpp  limpObject.hpp  limpOpenGL.cpp  limpOpenGL.hpp  limpOpenGLRenderer.hpp  limpPath.hpp  limpPhysicsObject.hpp  limpRelation.hpp  limpResourceManager.hpp  limpScene.hpp  limpShader.hpp  limpSoundObject.hpp  limpStateManager.hpp  limpTexture.hpp  limpTypes.hpp  limpUI.hpp  limpUniform.hpp  limpVertex.hpp  limpWorld.hpp
LimpGame/: CMakeLists.txt  game.hpp  main (copy).cpp  main.cpp  main_feb28.cpp
LuaInterface-1.0/: CMakeLists.txt  classTemplate.txt
LuaInterface-1.0/cmake/Modules/: FindLuaInterface.cmake
LuaInterface-1.0/include/: CMakeLists.txt  luaArray.hpp  luaClass.hpp  luaError.hpp  luaFunctions.hpp  luaInterface.hpp  luaLib.hpp  luaStack.hpp  luaTable.hpp  luaTypes.hpp
cmake/: FindAssimp.cmake  FindGLEW.cmake  FindLimpEngine.cmake  FindLuaInterface.cmake
shared/: config.txt
shared/scripts/: lua_script.lua  start.lua
shared/shader/: frag.glsl  vert.glsl
